# wasm-examples

./: .gitmodules  LICENSE  Readme.md
AssemblyScript/: main.ts  main.wasm  wiliwasm.ts
cxx/: .gitignore  CMakeLists.txt  CMakePresets.json  Readme.md
cxx/examples/accel/: CMakeLists.txt  accel.cpp
cxx/examples/ball_game/: ball.cpp
cxx/examples/radio/: CMakeLists.txt  radio.cpp
cxx/examples/rainbow_leds/: CMakeLists.txt  rainbow_leds.cpp
cxx/examples/simon/: CMakeLists.txt  readme.md  simon.cpp
cxx/examples/simple_led/: CMakeLists.txt  simple_led.cpp
cxx/pip_boy/: CMakeLists.txt  Readme.md
cxx/pip_boy/include/: fwwasm.h
cxx/pip_boy/src/: demo.cpp  main.cpp
cxx/rainbow_leds/: .clang-format  CMakeLists.txt  Readme.md
cxx/rainbow_leds/src/: demo.cpp
cxx/src/radio/: CMakeLists.txt
cxx/src/rainbow_leds/: CMakeLists.txt
cxx/src/simple_led/: CMakeLists.txt  simple_led.cpp
fwi/: pip_boy.fwi
go/: Readme.md  main.go  target.json
go/src/: main.go
go/src/fwwasm/: fwwasm.go
grain/: .gitignore
grain/rainbow_leds/: .gitignore  rainbow_leds.gr  rainbow_leds.gro
rust/: Cargo.toml  Readme.md
rust/.cargo/: config.toml
rust/crates/build_a_badge/: Cargo.toml
rust/crates/build_a_badge/assets/: build_a_badge.txt  settings.txt
rust/crates/build_a_badge/src/: colors.rs  main.rs
rust/crates/fwwasm-ffi/: Cargo.toml  build.rs
rust/crates/fwwasm-ffi/src/: lib.rs
rust/crates/radio/: Cargo.toml
rust/crates/radio/src/: main.rs
rust/crates/rainbow_led/: Cargo.toml
rust/crates/rainbow_led/src/: main.rs
rust/crates/valentines_day_img_animation_ir_audio/: Cargo.toml
rust/crates/valentines_day_img_animation_ir_audio/src/: README.md  main.rs  valentines.wasm
rust/crates/valentines_day_img_animation_ir_audio/src/FWI_Valentines_Img/: picture1.fwi  picture2.fwi  picture3.fwi  picture4.fwi  picturestart.fwi
rust/pip_boy/: Cargo.toml  Readme.md  build.rs
rust/pip_boy/.cargo/: config.toml
rust/pip_boy/src/: fwwasm.rs  main.rs
rust/radio/: Cargo.toml  Readme.md  build.rs  fwwasm.h
rust/radio/.cargo/: config.toml
rust/radio/src/: fwwasm.rs  main.rs
rust/rainbow_led/: Cargo.toml  build.rs
rust/rainbow_led/.cargo/: config.toml
rust/rainbow_led/src/: fwwasm.rs  main.rs
zig/: .gitignore  Readme.md  build.zig  build.zig.zon
zig/src/: main.zig
zig/zig_heap/: build.zig  build.zig.zon
zig/zig_heap/src/: main.zig
zig/zig_radio/: build.zig  build.zig.zon
zig/zig_radio/src/: main.zig
