[workspace]
members = [ "crates/build_a_badge", "crates/fwwasm-ffi",
    "crates/radio", "crates/rainbow_led"
]

resolver = "2"

[workspace.metadata]
wasm-name-section = false
wasm-producers-section = false

[profile.release]
lto = true
opt-level = 's'
codegen-units = 1
panic = "abort"
strip = true
